--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Youssef Medhat's Porfolio</h1>
+    <h2>I'm a Web Developer</h2>
+    <hr>
+    <h2><a href="/2.4 Movie Ranking Project/index.html">Movie Ranking Project</a></h2>
+    <img height="200" src="/4.3 HTML Porfolio Project/assets/images/movie-ranking.png">
+<h2><a href="/3.4 Birthday Invite Project/index.html">Brithday Invite Project</a></h2>
+<img height="200" src="/4.3 HTML Porfolio Project/assets/images/birthday-invite.png">
+<hr>
+<h3><a href="/index.html">About Me</a>
+    <a href="/public/contact.html">Contact Me</a></h3>
+</body>
+</html>
 
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
